[metadata]
name = guacamole-api-koa
version = 0.0.4
author = Artem Batalov
author_email = archyz@gmail.com
description = A Python package that allows for simple interactions with Apache Guacamole REST API as a wrapper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src